# circleci-catch2-repo

./: CMakeLists.txt  ReadMe.md
.circleci/: config.yml
src/: CMakeLists.txt  sampleCatchProgram.cpp  sample_function.cpp  sample_function.h
test/: CMakeLists.txt  sample_function_test.cpp
